Закончил страницу с фотографиями(мобильная версия)

--- a/sass/blocks/content-description.scss
+++ b/sass/blocks/content-description.scss
@@ -13,6 +13,13 @@
     }
   }
 
+  &--photo-page {
+    margin-bottom: 15px;
+    .content-description__wrapper {
+      padding: 0 35px;
+    }
+  }
+
   @media #{$tablet-width} {
     &__wrapper {
       @include content-wrapper-tablet;
