--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -19,6 +19,14 @@
 // }
 
 @font-face {
+  font-weight: 300;
+  font-family: "Open Sans";
+  font-style: normal;
+
+  src: url("../fonts/opensanslight.woff2") format("woff2");
+}
+
+@font-face {
   font-weight: 400;
   font-family: "Open Sans";
   font-style: normal;
