--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -219,31 +219,34 @@
 }
 
 .like-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+  box-sizing: border-box;
   text-transform: uppercase;
+  font-size: 12px;
   line-height: 24px;
   color: $pages-text-color-pink;
   font-size: 0;
 
-
   &__label {
-    @include inline-block();
+    margin-right: 3px;
     font-size: 12px;
-    margin-right: 5px;
   }
 
   &__count{
-    @include inline-block();
     font-size: 12px;
   }
 
   &__btn {
     @include reset-button-style;
-    @include inline-block();
     box-sizing: border-box;
     width: 15px;
-    height: 20px;
-    margin-right: 15px;
+    height: 13px;
     background: url(../img/icon-heart.svg) no-repeat 50% 50%;
+    background-size: 14px 12px;
+    margin-right: 17px;
   }
 }
 
@@ -260,7 +263,7 @@
   &__toggle {
     position: absolute;
     top: 0;
-    left: 70%;
+    left: 80%;
     transform: translateY(-50%);
     background-color: $pages-color-gray;
     display: block;
