--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -29,6 +29,12 @@
     }
   }
 
+  &--photo-page {
+    .page-footer__container {
+      padding-top: 40px;
+    }
+  }
+
   @media #{$mobile-width-only} {
     &--index {
       display: none;
