--- a/sass/blocks/photo-post.scss
+++ b/sass/blocks/photo-post.scss
@@ -1,24 +1,29 @@
 .photo-post {
-  position: relative;
-  padding-bottom: 40px;
   margin-bottom: 20px;
-  line-height: 24px;
-  background-color: $pages-color-gray;
+
+  &__content {
+    background-color: $pages-color-gray;
+    padding: 17px 17px 16px 17px;
+    display: flex;
+    flex-direction: column;
+  }
 
   &__image-link {
+    position: relative;
     @include reset-link-style;
     display: block;
     background-color: #000;
   }
 
-  &__content {
-    padding: 13px;
+  &__image {
+    width: 280px;
+    height: 180px;
   }
 
   &__title {
     padding: 0;
     margin: 0;
-    @include pages-font-settings;
+    font-size: 14px;
     line-height: 24px;
   }
 
@@ -27,14 +32,30 @@
   }
 
   &__publication-time {
-    font-weight: 400;
+    font-weight: 300;
     text-transform: uppercase;
     font-size: 12px;
+    line-height: 24px;
   }
 
-  &__post-text p {
-    padding: 0;
-    margin: 10px 0;
+  &__post-text {
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 24px;
+    p {
+      margin: 0;
+    }
+  }
+
+  &--panorama {
+    .photo-post__wrapper {
+      @include content-wrapper-mobile;
+    }
+
+    .photo-post__image {
+      width: 320px;
+      height: 137px;
+    }
   }
 
   &__panorama-label {
@@ -53,11 +74,6 @@
     line-height: 24px;
     text-transform: uppercase;
     font-weight: 700;
-  }
-
-  .like-field {
-    position: absolute;
-    bottom: 10px;
   }
 
   @media #{$tablet-width} {
