Закончил страницу с фотографиями(планшетная версия)

--- a/sass/blocks/content-description.scss
+++ b/sass/blocks/content-description.scss
@@ -33,6 +33,10 @@
         display: block;
       }
     }
+
+    &--photo-page {
+      margin-bottom: 41px;
+    }
   }
 
   @media #{$desktop-width} {
