--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -62,6 +62,10 @@
         padding-right: 50%;
       }
     }
+
+    &--photo-page {
+      padding-bottom: 140px;
+    }
   }
 
   @media #{$desktop-width} {
