--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -71,5 +71,10 @@
   @media #{$desktop-width} {
     padding-top: 174px;
     padding-bottom: 100px;
+
+    &--photo-page {
+      padding-right: 350px;
+      padding-left: 350px;
+    }
   }
 }
