--- a/sass/blocks/contacts-block.scss
+++ b/sass/blocks/contacts-block.scss
@@ -14,6 +14,8 @@
   }
 
   &__contacts {
+    display: flex;
+    flex-direction: column;
     padding-bottom: 18px;
   }
 
@@ -31,7 +33,7 @@
   }
 
   &__contact {
-    padding-bottom: 18px;
+    margin-bottom: 18px;
 
     // &:nth-of-type(1) {
     //   padding-top: 7px;
