--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-  background: $pages-text-color url(../img/bg-back-mobile.jpg) no-repeat;
+  background: $pages-text-color url(../img/bg-back-mobile.jpg) no-repeat 50% 0;
   color: #fff;
   padding-top: 96px;
   padding-bottom: 54px;
@@ -17,20 +17,20 @@
     font-weight: 300;
   }
 
-  &--main {
-    background:
-    url(../img/iphone-hand-mobile.png) no-repeat 0 10%,
-    #000 url(../img/bg-back-mobile.jpg) no-repeat;
-  }
-
   &--photo-page {
     padding-bottom: 83px;
   }
 
-  @media #{$mobile-width-only} {
-    &--main {
-      padding-top: 300px;
+  &--index-page {
+    padding-top: 456px;
+    padding-bottom: 0;
+    background:
+    url(../img/iphone-hand-mobile.png) no-repeat 0 172px,
+    url(../img/bg-back-mobile.jpg) no-repeat 50% -6px;
+  }
 
+  @media #{$mobile-width-only} {
+    &--index-page {
       .intro__text {
         display: none;
       }
@@ -38,6 +38,7 @@
   }
 
   @media #{$tablet-width} {
+    background: $pages-text-color url(../img/bg-back-tablet@1x.jpg) no-repeat 50% 0;
     padding-top: 180px;
     padding-bottom: 80px;
 
@@ -56,7 +57,7 @@
     &--main {
       background:
       url(../img/iphone-hand-mobile.png) no-repeat 50% 100%,
-      #000 url(../img/bg-back-mobile.jpg) no-repeat;
+      #000 url(../img/bg-back-tablet@1x.jpg) no-repeat;
 
       .intro__wrapper {
         padding-right: 50%;
@@ -69,6 +70,7 @@
   }
 
   @media #{$desktop-width} {
+    background: $pages-text-color url(../img/bg-back-desktop.jpg) no-repeat 50% 0;
     padding-top: 174px;
     padding-bottom: 100px;
 
