--- a/sass/blocks/contacts-block.scss
+++ b/sass/blocks/contacts-block.scss
@@ -34,18 +34,6 @@
 
   &__contact {
     margin-bottom: 18px;
-
-    // &:nth-of-type(1) {
-    //   padding-top: 7px;
-
-    //   .contacts-block__contact-address {
-    //     margin-top: -2px;
-    //   }
-    // }
-
-    // &:nth-of-type(2) {
-    //   padding-top: 17px;
-    // }
   }
 
   @media #{$tablet-width} {
@@ -57,9 +45,8 @@
     }
 
     &__contacts {
-      display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
-      min-height: 180px;
       justify-content: center;
       align-items: center;
       align-content: center;
@@ -74,11 +61,12 @@
 
     &__contact {
       width: 320px;
-      padding-bottom: 45px;
+      padding-bottom: 26px;
 
       &:last-of-type {
         width: 250px;
-        padding-bottom: 7px;
+        padding-bottom: 0;
+        margin-bottom: 8px;
       }
     }
 
