--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -54,13 +54,21 @@
       padding: 0 30px;
     }
 
-    &--main {
+    &--index-page {
+      padding-top: 204px;
+      padding-right: 50%;
       background:
-      url(../img/iphone-hand-mobile.png) no-repeat 50% 100%,
-      #000 url(../img/bg-back-tablet@1x.jpg) no-repeat;
+      url(../img/iphone-hand-tablet@1x.png) no-repeat 100% 100%,
+      $pages-text-color url(../img/bg-back-tablet@1x.jpg) no-repeat 50% 0;
 
       .intro__wrapper {
-        padding-right: 50%;
+        padding-right: 10px;
+      }
+
+      .intro__text {
+        font-size: 40px;
+        line-height: 48px;
+        font-weight: 300;
       }
     }
 
