--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -36,7 +36,7 @@
   }
 
   @media #{$mobile-width-only} {
-    &--index {
+    &--index-page {
       display: none;
     }
   }
@@ -65,6 +65,12 @@
       .page-footer__container {
         padding-top: 0px;
         min-height: 111px;
+      }
+    }
+
+    &--index-page {
+      .page-footer__container {
+        min-height: 112px;
       }
     }
   }
